# price_parser_bot

./: .gitignore  README.md  main_bot.py  main_parser.py  pyproject.toml
config_data/: constants.py
db/: base_model.py  models.py  requests.py
filters/: filters.py
handlers/: user_handlers.py
keyboards/: inline_keyboards.py
lexicon/: lexicon.py
services/: agregate_prices.py  parse_prices.py  upload_file_service.py  utils.py
states/: states.py
tests/services/: test_agregate_prices.py  test_parse_prices.py  test_upload_file_service.py  test_utils.py
