[tool.poetry]
name = "price-parser-bot"
version = "0.1.0"
description = ""
authors = ["knopaf1 <knopaf1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
aiogram = ">=3.20.0.post0,<4.0.0"
aiohttp = ">=3.11.16,<4.0.0"
apscheduler = ">=3.11.0,<4.0.0"
asyncio = ">=3.4.3,<4.0.0"
dataframe-image = ">=0.2.7,<0.3.0"
datetime = ">=5.5,<6.0"
dotenv = ">=0.9.9,<0.10.0"
pandas = ">=2.2.3,<3.0.0"
parsel = ">=1.10.0,<2.0.0"
pydantic = ">=2.11.3,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
pytest = ">=8.3.5,<9.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
aiosqlite = "^0.21.0"
openpyxl = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
